--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jquery": "^3.4.1",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
+    "vue-scrollto": "^2.15.0",
     "vue-slick": "^1.1.15"
   },
   "devDependencies": {
