--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vue-scrollto": "^2.15.0",
-    "vue-slick": "^1.1.15"
+    "vue-slick": "^1.1.15",
+    "vue2-google-maps": "^0.10.7"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.9.0",
